--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
+    "python.formatting.blackArgs": [],
     "python.formatting.provider": "black",
-    "python.formatting.blackArgs": [
-        "--line-length=79"
-    ],
     "python.linting.flake8Enabled": true
 }
