--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,7 @@ commands =
     bash -c "if [[ ! -z $\{GITHUB_ACTIONS\} ]]; then codecov; fi"
 
 [flake8]
+max-line-length = 88
 extend-ignore = E203
+per-file-ignores =
+    */luogu/__init__.py: F401
