--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,41 @@
 [tox]
-envlist = py36,py37,py38,py39,py310
-isolated_build = True
+envlist = py36, py37, py38, py39, py310, lint, docs
+isolated_build = true
 
 [testenv]
-allowlist_externals = bash
 passenv = *
+deps = coverage
+commands =
+    coverage run --source={envsitepackagesdir}{/}luogu -m tests
+
+[testenv:lint]
+skip_install = true
 deps =
-    codecov
-    coverage
     black
     flake8
 commands =
-    flake8 {envsitepackagesdir}{/}luogu
-    black --exclude "__pycache__" --check {envsitepackagesdir}{/}luogu
-    coverage run --source={envsitepackagesdir}{/}luogu -m tests
-    bash -c "if [[ ! -z $\{GITHUB_ACTIONS\} ]]; then codecov; fi"
+    flake8 src tests
+    black src tests
+
+[testenv:docs]
+allowlist_externals = make
+skip_install = true
+deps = -rdocs/requirements.txt
+commands =
+    make -C docs html
+
+[testenv:codecov]
+skip_install = true
+deps = codecov
+commands = codecov
+
+[gh]
+python =
+    3.6 = py36, codecov
+    3.7 = py37, codecov
+    3.8 = py38, codecov, lint, docs
+    3.9 = py39, codecov
+    3.10 = py310, codecov
 
 [flake8]
 max-line-length = 88
