--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,10 +9,11 @@ on: [push, pull_request]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}-latest
     strategy:
       fail-fast: false
       matrix:
+        operating-system: [ubuntu, windows, macos]
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
 
     steps:
@@ -24,8 +25,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 tox
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install flake8 tox-gh
+          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -34,7 +35,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with tox
         run: |
-          tox --skip-missing-interpreters
+          python -m tox r
         env:
           LUOGU_USERNAME: ${{ secrets.LUOGU_USERNAME }}
           LUOGU_PASSWORD: ${{ secrets.LUOGU_PASSWORD }}
