--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = luogu
-version = 0.0.1
+version = attr: luogu.__version__
 author = 汪心禾
 author_email = wangxinhe06@gmail.com
 description = A model-based Python implement for Luogu API client
