--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,8 @@ deps =
     black
     flake8
 commands =
-    flake8 src tests
-    black src tests
+    flake8
+    black --check .
 
 [testenv:docs]
 allowlist_externals = make
