--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/piterator-org/pyluogu
 project_urls =
     Bug Tracker = https://github.com/piterator-org/pyluogu/issues
+    Documentation = https://pyluogu.readthedocs.io/
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
